Вынес константу кол-во записей в истории, заменил List на LinkedList